@@ -1,0 +1,2 @@
+otpCalc is an RFC2289 and RFC1760 compliant one time password
+calculator, written to use the GTK+ library for screen I/O.
