@@ -1,0 +1,3 @@
+@comment $NetBSD: PLIST,v 1.1.1.1 2002/10/04 15:05:05 hubertf Exp $
+bin/otpCalc
+man/man1/otpCalc.1
