@@ -1,0 +1,4 @@
+$NetBSD: distinfo,v 1.1.1.1 2002/10/04 15:05:05 hubertf Exp $
+
+SHA1 (otpCalc-0.96.tar.gz) = c3a11060a2a84b95165f5d646c637ff032136d13
+Size (otpCalc-0.96.tar.gz) = 123491 bytes
